# PDFTool

./: .gitignore  BRANCHES.md  PDFTool-debug.spec  PDFTool-engine.spec  PDFTool-mac.spec  PDFTool.bat  PDFTool.spec  QYPdfTool.spec  README.md  Win10打不开-排查说明.txt  _paths.bat  build-android.sh  build-debug.bat  build-mac.sh  build-native-mac.sh  build.bat  pack-windows-release.sh  pyproject.toml  requirements-android.txt  run-dev.bat  run-mac.sh  run-native-mac.sh  setup-github.sh  从压缩包到exe完整步骤.txt  使用说明-Android.txt  使用说明-Windows.txt  安装Python环境.bat  安装依赖并运行.bat  安装并打包.bat
.github/workflows/: build-android.yml  build-mac.yml  main.yml
PDFTool/: requirements.txt  检查环境.bat
mac/: README-Native.md
macOS/PDFToolNative/: Package.swift
macOS/PDFToolNative/.build/: build.db  plugin-tools.yaml
macOS/PDFToolNative/Sources/PDFToolNative/: AppState.swift  ContentView.swift  EngineClient.swift  FeatureViews.swift  FilePathRow.swift  (+1 more)
macOS/PDFToolNativeOC/: Makefile  PDFToolNative  QYPTAppDelegate.h  QYPTAppDelegate.m  QYPTAudioEditWindowController.h  QYPTAudioEditWindowController.m  QYPTAuthHelper.h  QYPTAuthHelper.m  QYPTEngineClient.h  QYPTEngineClient.m  QYPTFFmpegAudio.h  QYPTFFmpegAudio.m  QYPTHubWindowController.h  QYPTHubWindowController.m  QYPTMainWindowController.h  QYPTMainWindowController.m  main.m
runtime/: 说明.txt
scripts/: bundle-ffmpeg-mac.sh  prepare_ffmpeg_win.py
src/: android_main.py  app_common.py  audio_app.py  engine_cli.py  ffmpeg_audio.py  hub_app.py  main.py  pdf_app.py  pdf_core.py  startup_log.py  word_convert.py
win/: README-Windows.md
(+128 files in other folders)
